--- a/study_regis/study_register/templates/study_register/base.html
+++ b/study_regis/study_register/templates/study_register/base.html
@@ -1,5 +1,4 @@
-<a href="{% url 'index' %}">
-    <h1>Study Register</h1>
-</a>
+<a href="{% url 'index' %}">Study Register</a> -
+<a href="{% url 'topics' %}">Tópicos</a>
 
 {% block content %}{% endblock content %}
