Criação de página para adição de novos tópicos.

--- a/study_regis/study_register/templates/study_register/topics.html
+++ b/study_regis/study_register/templates/study_register/topics.html
@@ -10,4 +10,8 @@
         {% endfor %}
     </ul>
 
+    <p>
+        <a href="{% url 'new_topic' %}">Adicionar novo tópico</a>
+    </p>
+
 {% endblock content %}
