Criação de página para cadastro de novos resumos para um dos tópicos escolhidos.

--- a/study_regis/study_register/templates/study_register/topics.html
+++ b/study_regis/study_register/templates/study_register/topics.html
@@ -1,7 +1,7 @@
 {% extends "study_register/base.html" %}
 
 {% block content %}
-    <p>Tópicos: </p>
+    <h3>Tópicos: </h3>
     <ul>
         {% for topic in topics %}
                 <li><a href="{% url 'topic' topic.id %}">{{ topic }}</a></li>
