--- a/study_regis/study_register/templates/study_register/topic.html
+++ b/study_regis/study_register/templates/study_register/topic.html
@@ -16,4 +16,8 @@
         {% endfor %}
     </ul>
 
+    <p>
+        <a href="{% url 'new_entry' topic.id %}">Adicionar novo resumo</a>
+    </p>
+
 {% endblock content %}
