--- a/study_regis/study_register/templates/study_register/topic.html
+++ b/study_regis/study_register/templates/study_register/topic.html
@@ -10,6 +10,9 @@
             <li>
                 <p> {{ entry.date_added | date:'M d, Y H:i'}} </p>
                 <p> {{ entry.text | linebreaks }} </p>
+                <p>
+                    <a href="{% url 'edit_entry' entry.id %}">Editar resumo</a>
+                </p>
             </li>
         {% empty %}
             <li>Não há resumos registrados. </li>
