--- a/study_regis/study_register/templates/study_register/edit_entry.html
+++ b/study_regis/study_register/templates/study_register/edit_entry.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-    <form action="{% url 'edit_entry' entry.id %}">
+    <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
+
+    <h3>Editar anotação: </h3>
+
+    <form action="{% url 'edit_entry' entry.id %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">Salvar</button>
