--- a/study_regis/study_register/templates/study_register/base.html
+++ b/study_regis/study_register/templates/study_register/base.html
@@ -1,4 +1,12 @@
-<a href="{% url 'index' %}">Study Register</a> -
-<a href="{% url 'topics' %}">Tópicos</a>
+<div>
+    <a href="{% url 'index' %}">Study Register</a> -
+    <a href="{% url 'topics' %}">Tópicos</a>
+    {% if user.is_authenticated %}
+        Olá, {{ user.username }}
+        <a href="{% url 'logout' %}">Sair</a>
+    {% else %}
+        <a href="{% url 'login' %}">Entrar</a>
+    {% endif %}
+</div>
 
 {% block content %}{% endblock content %}
